@@ -24,13 +24,14 @@ python:
 #the third-party extenison mdx_math.py comes with a setup.py script
 # Thank you Dmitry Shachnev (https://github.com/mitya57/python-markdown-math)
 markdown_extensions:
+    - toc:
+        permalink: true
     - mdx_math:
         enable_dollar_delimiter: True #for use of inline $..$
     - fenced_code
     - codehilite
     - footnotes
     - admonition
-    - toc(permalink=true)
 
 # Required to load the MathJax javascript for the mdx_math.py
 extra_javascript: ['https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML', 'mathjaxhelper.js']
